--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://pathikrit2005:Deb%405125@cluster0.9rtua0b.mongodb.net/PawsCircle?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://pathikrit2005:Deb%405125@cluster0.9rtua0b.mongodb.net/PawFeed?retryWrites=true&w=majority
