--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# Node modules
 /node_modules
-/Backend/.env
+
+# Env files (sensitive info)
+Backend/.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System files
+.DS_Store
+Thumbs.db
